--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
   "dependencies": {
     "next": "15.1.7",
     "react": "^19.0.0",
+    "react-alice-carousel": "^2.9.1",
     "react-dom": "^19.0.0",
     "react-icons": "^5.5.0"
   },
